--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  http: ^1.5.0
+  flutter_secure_storage: ^9.2.4
+  flutter_dotenv: ^6.0.0
 
 
 dev_dependencies:
@@ -35,4 +38,5 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
 
