--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_dotenv: ^6.0.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -31,6 +30,8 @@ dev_dependencies:
   build_runner: ^2.7.0
   freezed: ^3.2.0
   json_serializable: ^6.10.0
+  test: ^1.24.0
+  mockito: ^5.4.0
 
 flutter:
 
