--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   http: ^1.5.0
   flutter_secure_storage: ^9.2.4
   flutter_dotenv: ^6.0.0
+  logger: ^2.6.1
+  retry: ^3.1.2
+  html_editor_enhanced: ^2.7.1
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
