--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_html: ^3.0.0
   timezone: ^0.10.1
   dropdown_button2: ^2.3.9
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
