--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   dropdown_button2: ^2.3.9
   sqflite: ^2.4.2
   connectivity_plus: ^7.0.0
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  flutter_animate: ^4.5.2
+  flutter_slidable: ^4.0.3
 
 dev_dependencies:
   flutter_test:
