--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_animate: ^4.5.2
   flutter_slidable: ^4.0.3
+  flutter_quill: ^11.4.1
+  flutter_quill_extensions: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,7 @@ dev_dependencies:
   json_serializable: ^6.10.0
   test: ^1.24.0
   mockito: ^5.4.0
+  flutter_localization: ^0.3.3
 
 flutter:
 
