--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_slidable: ^4.0.3
   flutter_quill: ^11.4.1
   flutter_quill_extensions: ^11.0.0
+  vsc_quill_delta_to_html: ^1.0.5
 
 dev_dependencies:
   flutter_test:
