--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_quill: ^11.4.1
   flutter_quill_extensions: ^11.0.0
   vsc_quill_delta_to_html: ^1.0.5
+  dio: ^5.9.0
+  dio_smart_retry: ^7.0.1
 
 dev_dependencies:
   flutter_test:
