--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.2.0
   flutter_svg: ^2.2.1
   flutter_launcher_icons: ^0.14.4
+  syncfusion_flutter_calendar: ^31.1.19
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
