--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,5 +79,5 @@ flutter:
     - assets/images/
     - assets/data/
     - .env
-    - assets/data/login_test_data.json
+    - assets/data/test_data.json
 
