--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   syncfusion_flutter_calendar: ^31.1.19
   intl: ^0.20.2
+  excel: ^4.0.6
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
