--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   excel: ^4.0.6
   path_provider: ^2.1.5
   url_launcher: ^6.3.2
+  firebase_core: ^4.2.1
+  firebase_crashlytics: ^5.0.5
+  firebase_analytics: ^12.0.4
 
 dev_dependencies:
   flutter_test:
