update 10/12 : integrate Firebase Analytics & Crashlytics + setup crash reporting

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ bao_cao_test
 .swiftpm/
 migrate_working_dir/
 
+
+android/app/keystore_base64.txt
+android/app/upload-keystore.jks
 # IntelliJ related
 *.iml
 *.ipr
