--- a/.github/workflows/firebase_deploy.yml
+++ b/.github/workflows/firebase_deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main # Hoặc tên branch bạn muốn trigger (ví dụ: develop, master)
 
+env:
+  MAJOR_VERSION: 1
+  MINOR_VERSION: 1
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -48,9 +52,9 @@ jobs:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-        run: flutter build apk --release
+        run: flutter build apk --release --build-name=${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }} --build-number=${{ github.run_number }}
 
-      # 7. Upload lên Firebase App Distribution
+      # 8. Upload lên Firebase App Distribution
       - name: Upload to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
