--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_crashlytics: ^5.0.5
   firebase_analytics: ^12.0.4
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
